# resume_matcher

./: README.md  main.py  pyproject.toml
backend/: .env  db.sqlite3
backend/backend/: settings.py  urls.py
backend/resume/: ai_utils.py  forms.py  urls.py  views.py
backend/resume/static/css/: style.css
backend/resume/templates/: home.html
