[project]
name = "resume-skill-matcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.8",
    "django-cors-headers>=4.9.0",
    "django-crispy-forms>=2.5",
    "django-restframework>=0.0.1",
    "djangorestframework>=3.16.1",
    "environ>=1.0",
    "requests>=2.32.5",
]
